--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,4 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "mfedemo" #Must be unique in Heroku
+          heroku_email: "raja.dsms@gmail.com"
