--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,4 +1,4 @@
-name: deploy-containers
+name: deploy-container
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 defaults:
   run:
-    working-directory: packages/container
+    working-directory: "packages/container"
 
 jobs:
   build:
