--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,8 +18,10 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+        working-directory: packages/container
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
+        working-directory: packages/container
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "mfedemo"
