--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - master
     paths:
-      - "packages/container/**"
+      - "container/**"
 
 defaults:
   run:
-    working-directory: ./container
+    working-directory: container
 
 jobs:
   build:
