--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "packages/container/**"
+
+defaults:
+  run:
+    working-directory: ./packages/container
 
 jobs:
   build:
