--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+      - run: npm install
+      - run: npm run build
+
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
