--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
+        run:
+          working-directory: ./packages/container
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "mfedemo"
