--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,10 +21,12 @@ jobs:
       - run: npm install
       - run: npm run build
 
+defaults:
+  run:
+    working-directory: ./packages/container
+
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
-      - run:
-          working-directory: ./packages/container
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "mfedemo"
