--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,10 +7,6 @@ on:
     paths:
       - "packages/container/**"
 
-defaults:
-  run:
-    working-directory: ./packages/container
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,13 +17,10 @@ jobs:
       - run: npm install
       - run: npm run build
 
-defaults:
-  run:
-    working-directory: packages/container
-
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "mfedemo"
           heroku_email: "raja.dsms@gmail.com"
+          appdir: "packages/container"
