--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - "packages/container/**"
 
+defaults:
+  run:
+    working-directory: ./packages/container
+
 jobs:
   build:
     runs-on: ubuntu-latest
