--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,15 +1,15 @@
-name: deploy-container
+name: deploy-marketing
 
 on:
   push:
     branches:
       - master
     paths:
-      - "packages/container/**"
+      - "packages/marketing/**"
 
 defaults:
   run:
-    working-directory: ./packages/container
+    working-directory: ./packages/marketing
 
 jobs:
   build:
@@ -18,12 +18,11 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-        env:
-          PROD_DOMAIN: ${{ secrets.PROD_DOMAIN }}
+
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "mfedemo"
           heroku_email: "raja.dsms@gmail.com"
-          appdir: "packages/container"
+          appdir: "packages/marketing"
