--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,13 +17,12 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - run: npm install
+      - run: npm run build
+
+      - uses: chrislenon/action-aws-cli@v1.1
+      - run: aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
-          PROD_DOMAIN: ${{ secrets.PROD_DOMAIN }}
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "mfedemo"
-          heroku_email: "raja.dsms@gmail.com"
-          appdir: "packages/container"
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
