--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - "packages/marketing/**"
+      - "packages/narketing/**"
 
 defaults:
   run:
@@ -17,12 +17,12 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - run: npm install
+      - run: npm run build
 
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "mfedemo"
-          heroku_email: "raja.dsms@gmail.com"
-          appdir: "packages/marketing"
+      - uses: chrislenon/action-aws-cli@v1.1
+      - run: aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/marketing/latest
+        env:
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
