--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
+        env: PROD_DOMAIN:${{secrets.PROD_DOMAIN}}
 
       - uses: chrislennon/action-aws-cli@v1.1
         env:
