aws yaml file setup

--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - "packages/narketing/**"
+      - "packages/marketing/**"
 
 defaults:
   run:
